@@ -1,3 +1,7 @@
+Mon Nov 12 2001  Peter Breitenlohner <peb@mppmu.mpg.de>
+	* Makefile.am: make joe installable into another root dir
+	with "make DESTDIR=/path/ install"
+
 Sun Nov 11 2001  Vitezslav Samel <samel@mail.cz>
 	* ufile.c: comment out unused functions (nask2()/uask2())
 
